# freq-math

./: CMakeLists.txt  Makefile  README.md  main.py
docs/: README.md  api-reference.md  developer-guide.md  user-guide.md
include/: audio_mapper.h  equation_parser.h  expected.h  math_evaluator.h
src/cpp/: audio_mapper.cpp  bindings.cpp  equation_parser.cpp  math_evaluator.cpp
src/python/: audio_synthesizer.py  dependency_bootstrap.py  freq_math_calculator.py
tests/: README.md  __init__.py  run_all_tests.py  test_audio_mapper.py  test_audio_synthesizer.py  test_audio_synthesizer_refactored.py  test_audio_synthesizer_updated.py  test_equation_parser.py  test_examples.py  test_freq_math_calculator.py  test_integration.py  test_main.py  test_math_evaluator.py  test_math_evaluator_cpp.py  test_math_evaluator_updated.py
